# Projects_of_AI_400

./: CLAUDE.md  README.md
.claude/: settings.local.json
.claude/skills/: project-designer.skill  sqlmodel-mastery.skill
.serena/: project.yml
AI_Powered_Task_Management_System/: .gitattributes  .gitignore  README.md
AI_Powered_Task_Management_System/backend/: .env.example  README.md  pyproject.toml  requirements.txt  tmpclaude-c007-cwd  verify_chat_agent.py
AI_Powered_Task_Management_System/backend/app/: __init__.py  main.py
AI_Powered_Task_Management_System/backend/app/agents/: __init__.py  chat_agent.py  context_manager.py  database_agent.py  task_intelligence_agent.py  task_parser.py  tools.py
AI_Powered_Task_Management_System/backend/app/api/v1/: api.py
AI_Powered_Task_Management_System/backend/app/api/v1/endpoints/: chat.py  tasks.py
AI_Powered_Task_Management_System/backend/app/core/: config.py  database.py  security.py
AI_Powered_Task_Management_System/backend/app/models/: __init__.py  conversation.py  links.py  tag.py  task.py  user.py  user_context.py
AI_Powered_Task_Management_System/backend/app/repositories/: __init__.py  conversation_repository.py  task_repository.py
AI_Powered_Task_Management_System/backend/app/schemas/: response.py  tag.py  task.py
AI_Powered_Task_Management_System/backend/app/services/: __init__.py  conversation_service.py  task_service.py
AI_Powered_Task_Management_System/backend/tests/: conftest.py  test_ai_features.py  test_tasks.py
AI_Powered_Task_Management_System/docs/: API.md  DEPLOYMENT.md  FEATURE_ROADMAP.md
docs/: ARCHITECTURE.md
(+18 files in other folders)
